--- a/sass/colors.scss
+++ b/sass/colors.scss
@@ -1,4 +1,4 @@
-$background: #333;
-$main_color: #ff69b4;
-$font_color: #fff;
-$second_font_color: #aaa;
+$primary-color: #F9F9F9;
+$secondary-color: #A4547C;
+$dark-color: #111111;
+$info-color: #797979;
