--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,116 @@
-.card {
-  background-color: #333;
-  height: 300px;
-  width: 500px;
-  margin: 25px;
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Roboto:wght@400;500&display=swap");
+nav {
+  background-color: #111111;
+  padding: 0px 50px;
+  display: flex;
+  justify-content: space-between;
 }
-.card img {
-  width: 200px;
+nav div {
+  align-items: center;
+  display: flex;
 }
-.card h1 {
-  color: #ff69b4;
+nav div #icon {
+  background-image: url("/img/sass.png");
+  background-size: cover;
+  width: 60px;
+  height: 40px;
+  padding-left: 20px;
 }
-.card h3 {
-  color: #aaa;
+nav div #nav-options {
+  display: flex;
+}
+nav div #nav-options li {
+  font-weight: bold;
+  list-style-type: none;
+  padding-left: 20px;
+}
+nav div #nav-options li a {
+  font-weight: bold;
+  font-size: 24px;
+  margin: 0;
+  color: #A4547C;
+  text-decoration: none;
+}
+nav p {
+  font-weight: bold;
+  font-size: 24px;
+  margin: 0;
+  color: #A4547C;
 }
 
 body {
   margin: 0;
-  padding: 0;
+  background-color: #F9F9F9;
+  font-family: "Dancing Script", serif;
+}
+
+#card-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 15px;
+  gap: 15px;
+}
+#card-container .card {
+  display: flex;
+  flex: 1 1 500px;
+  height: 300px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #A4547C;
+  border-radius: 20px;
+  box-shadow: 0px 0px 15px #111111;
+  background-color: #111111;
+}
+#card-container .card #image-1 {
+  width: 40%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url("/img/volcan1.jpeg");
+  border-radius: 20px 0px 0px 20px;
+}
+#card-container .card #image-2 {
+  width: 40%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url("/img/volcan2.jpeg");
+  border-radius: 20px 0px 0px 20px;
+}
+#card-container .card #image-3 {
+  width: 40%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url("/img/volcan3.jpeg");
+  border-radius: 20px 0px 0px 20px;
+}
+#card-container .card #image-4 {
+  width: 40%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url("/img/volcan4.jpeg");
+  border-radius: 20px 0px 0px 20px;
+}
+#card-container .card-content {
+  width: 60%;
+  padding: 10px;
+}
+#card-container .card-title {
+  margin-bottom: 0;
+  color: #A4547C;
+  font-size: 32px;
+  font-weight: bold;
+}
+#card-container .card-info {
+  margin-top: 10px;
+  color: #797979;
+}
+#card-container .card-body {
+  color: #F9F9F9;
 }/*# sourceMappingURL=main.css.map */
