--- a/sass/header.scss
+++ b/sass/header.scss
@@ -1,3 +1,46 @@
-nav{
-    
+$font-size: 24px;
+
+nav {
+    background-color: $dark-color;
+    padding: 0px 50px;
+    display: flex;
+    justify-content: space-between;
+    div {
+        align-items: center;
+        display: flex;
+        #icon {
+            background: {
+                image: url('/img/sass.png');
+                size: cover;
+            }
+            width: 60px;
+            height: 40px;
+            padding-left: 20px;
+        }
+        #nav-options {
+            display: flex;
+            li {
+                font-weight: bold;
+                list-style-type: none;
+                padding-left: 20px;
+                a {
+                    font: {
+                        weight: bold;
+                        size: $font-size;
+                    }
+                    margin: 0;
+                    color: $secondary-color;
+                    text-decoration: none;
+                }
+            }
+        }
+    }
+    p {
+        font: {
+            weight: bold;
+            size: $font-size;
+        }
+        margin: 0;
+        color: $secondary-color;
+    }
 }
