--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,7 +2,4 @@
 @import 'header';
 @import 'body';
 
-body{
-    margin: 0;
-    padding: 0;
-}
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Roboto:wght@400;500&display=swap');
